--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="estilos.css">
 <title>
-"pagina de presentaci&oacuten"
+    pagina de presentaci&oacuten
 </title>
 </head>
 <body >
